--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,32 @@
         <script src="js/app.js"></script>
     </head>
     <body ng-controller="testingAngularCtrl">
+
+        <header>
+            <h1>{{title}}</h1>
+        </header>
+
+        <section>
+            <form ng-submit="addDestination()">
+                City: <input name="city" type="text" ng-model="newDestination.city" />
+                Country: <input name="country" type="text" ng-model="newDestination.country" />
+                <input type="submit" value="Add" />
+            </form>
+        </section>
+
+        <section>
+            <h2>Your Trip</h2>
+            <h4 ng-show="message">{{message}}</h4>
+            <div ng-repeat="destination in destinations">
+                <div destination-directive destination="destination" api-key="apiKey" on-remove="removeDestination($index)"></div>
+            </div>
+        </section>
     
-    {{ title }}
+        <section>
+            <h2>Warmest Destinations</h2>
+            <div ng-repeat="destination in destinations | warmestDestinations: 6">
+                <span>{{destination.city}}, {{destination.country}}</span>
+            </div>
+        </section>
     </body>
 </html>
